# ProjektFastapi

./: .env  Dockerfile  README.md  config.py  database.py  docker-compose.yml  main.py  pyproject.toml
DataBaseModel/: post.py  user.py
PydanticModel/: post.py  user.py
PydenticModel/: post.py
Routers/: routerpost.py  routeruser.py
alembic/: env.py
routers/: routerpost.py  routeruser.py
