[tool.poetry]
name = "socialmedia"
version = "0.1.0"
description = ""
authors = ["damiankasnki"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.21"
pydantic = "^2.4.2"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
